--- a/docs/_sass/planswell-overrides.scss
+++ b/docs/_sass/planswell-overrides.scss
@@ -385,6 +385,19 @@ button,
     margin: 0 auto;
   }
 
+  .is-primary {
+    &.previous {
+      background-color: transparent;
+      border: 1px solid $primary;
+      color: $primary;
+
+      &:hover {
+        border-color: $primary-dark;
+        color: $primary-dark;
+      }
+    }
+  }
+
   &.is-link {
     color: $grey-light;
   }
