--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10448,6 +10448,19 @@ html.bulma {
   margin: 0 auto;
 }
 
+.bulma button .is-primary.previous,
+.bulma .button .is-primary.previous {
+  background-color: transparent;
+  border: 1px solid #17a65c;
+  color: #17a65c;
+}
+
+.bulma button .is-primary.previous:hover,
+.bulma .button .is-primary.previous:hover {
+  border-color: #139652;
+  color: #139652;
+}
+
 .bulma button.is-link,
 .bulma .button.is-link {
   color: #a6afb0;
