Revert class scoping and make it work for discovery

--- a/docs/_sass/planswell-variables.scss
+++ b/docs/_sass/planswell-variables.scss
@@ -27,9 +27,9 @@ $family-sans-serif: 'Lato', Helvetica, sans-serif;
 $size-1: 3rem;
 $size-2: 2.15rem;
 $size-3: 1.70rem;
-$size-4: 1.35rem;
-$size-5: 1.05rem;
-$size-6: 0.95rem;
+$size-4: 1.55rem;
+$size-5: 1.45rem;
+$size-6: 1.35rem;
 $size-7: 0.85rem;
 
 //Line-heights
@@ -44,6 +44,7 @@ $line-height-small: 126%;
 //Default colours
 $green: hsl(149, 76%, 37%);
 $red: hsl(17, 78%, 54%);
+$background: white;
 
 //Brand colours
 //Primary
