--- a/docs/_sass/planswell-overrides.scss
+++ b/docs/_sass/planswell-overrides.scss
@@ -12,7 +12,7 @@ html {
 body {
   height: 100%;
   box-sizing: border-box;
-  background-color: $white-smoke;
+  background-color: white;
 }
 
 .logo {
@@ -159,7 +159,27 @@ a {
   }
 }
 
+// ------- Panel Component
+.panel, .panel-block, .panel-heading {
+  background-color: $panel-heading-background-color;
+  border: none !important;
+}
+
+.panel {
+  box-shadow: $box-shadow;
+  padding: 1rem;
+
+  .field {
+    overflow: hidden;
+  }
+}
+
 //SurveyJS panel
+
+label.radio.is-large, label.checkbox {
+  height: 2.7rem;
+}
+
 section{
   &.main-column {
     display: block;
@@ -236,7 +256,7 @@ section{
       }
 
       &::placeholder {
-        color: $grey-lighter;
+        color: $grey;
       }
     }
 
@@ -774,7 +794,7 @@ textarea {
 
 // Radio inputs
 label {
- &.label {
+  &.label {
   display: inline-block;
   font-size: $size-7;
   color: $grey;
@@ -786,7 +806,6 @@ label {
   }
 
   &.figure-right {
-    display: inline-block;
     color: $grey-darker;
     float: right;
 
@@ -801,13 +820,12 @@ label {
       }
     }
   }
-}
+  }
 }
 //Form elements
 //
 //Text inputs
 .value-right {
-    display: inline-block;
     float: right;
 
     & label.per-month {
@@ -838,6 +856,7 @@ input[type="email"],
 input[type="password"],
 .select select {
     border: none;
+    box-sizing: content-box;
     border-bottom: 1px solid $grey-lighter;
     box-shadow: none;
     font-size: $size-5;
@@ -846,7 +865,7 @@ input[type="password"],
     transition: $transition-standard-ease; -webkit-transition: $transition-standard-ease; -moz-transition: $transition-standard-ease; -o-transition: $transition-standard-ease;
 
     &::placeholder {
-      color: $grey-lighter;
+      color: $grey;
     }
 
     &:focus {
@@ -887,6 +906,10 @@ input[type="password"],
     &:focus {
       color: $grey-dark;
     }
+  }
+
+  .input {
+    height: 1.05em;
   }
 
 // Form helpers
@@ -974,108 +997,108 @@ input[type="checkbox"] {
   }
 }
 
-// Mobile
-@media screen and (max-width: $mobile) {
-  //Global
-  //Structure & Layout
-  .header {
-    height: 3.75rem;
-    padding: 1.15rem 1.15rem 1.25rem;
+// // Mobile
+// @media screen and (max-width: $mobile) {
+//   //Global
+//   //Structure & Layout
+//   .header {
+//     height: 3.75rem;
+//     padding: 1.15rem 1.15rem 1.25rem;
 
-    .header-inner {
-      .logo {
-        top: calc(50% - 6px);
-        width: 152px;
-        height: 18px;
-      }
+//     .header-inner {
+//       .logo {
+//         top: calc(50% - 6px);
+//         width: 152px;
+//         height: 18px;
+//       }
 
-      .contact-text-link {
-        font-size: $size-6;
-      }
-    }
-  }
+//       .contact-text-link {
+//         font-size: $size-6;
+//       }
+//     }
+//   }
 
-  section{
-    .inner-column {
-      padding: 1.25rem 1.85rem 3rem;
-      margin-top: 3.75rem;
-      overflow: scroll;
+//   section{
+//     .inner-column {
+//       padding: 1.25rem 1.85rem 3rem;
+//       margin-top: 3.75rem;
+//       overflow: scroll;
 
-      &.onboarding-column::after {
-        content: '';
-        height: 150px;
-      }
-    }
-  }
+//       &.onboarding-column::after {
+//         content: '';
+//         height: 150px;
+//       }
+//     }
+//   }
 
-  .field {
-    &.ordered-field {
-      padding-left: 1.15rem;
-    }
-  }
+//   .field {
+//     &.ordered-field {
+//       padding-left: 1.15rem;
+//     }
+//   }
 
-  .box {
-    padding: $box-padding-mobile;
-  }
+//   .box {
+//     padding: $box-padding-mobile;
+//   }
 
-  .survey-footer {
-    padding: 1.35rem 1.85rem 3rem;
-    padding-bottom: 12%;
+//   .survey-footer {
+//     padding: 1.35rem 1.85rem 3rem;
+//     padding-bottom: 12%;
 
-    .footer-link-wrapper {
-      display: flex;
-      justify-content: space-between;
-    }
+//     .footer-link-wrapper {
+//       display: flex;
+//       justify-content: space-between;
+//     }
 
-    .button-next-wrapper {
-      margin-bottom: 0.75rem;
-    }
-    .progress-bar {
-      height: 6px;
-    }
-  }
+//     .button-next-wrapper {
+//       margin-bottom: 0.75rem;
+//     }
+//     .progress-bar {
+//       height: 6px;
+//     }
+//   }
 
-  //Elements
-  .button {
-    height: 2.35rem;
-    font-size: $size-6;
-    border-radius: $button-radius;
-    padding-left: $button-padding-left-small;
-    padding-right: $button-padding-left-small;
+//   //Elements
+//   .button {
+//     height: 2.35rem;
+//     font-size: $size-6;
+//     border-radius: $button-radius;
+//     padding-left: $button-padding-left-small;
+//     padding-right: $button-padding-left-small;
 
-    &.is-button-next {
-      padding-right: 1.15rem;
-    }
-  }
+//     &.is-button-next {
+//       padding-right: 1.15rem;
+//     }
+//   }
 
-  .back-button-wrapper {
-    margin-bottom: 1.5rem;
+//   .back-button-wrapper {
+//     margin-bottom: 1.5rem;
 
-    .back-button {
-      width: 19px;
-      height: 14px;
-    }
-  }
+//     .back-button {
+//       width: 19px;
+//       height: 14px;
+//     }
+//   }
 
-  .table-heading-wrapper {
-    h5 {
-      &.recommendation-label {
-        margin-right: 0rem;
-      }
-    }
-  }
+//   .table-heading-wrapper {
+//     h5 {
+//       &.recommendation-label {
+//         margin-right: 0rem;
+//       }
+//     }
+//   }
 
-  //Form fields
-  input[type="text"],
-  input[type="number"],
-  .select,
-  .select select {
-    width: 100%;
-    font-size: $size-6;
-  }
+//   //Form fields
+//   input[type="text"],
+//   input[type="number"],
+//   .select,
+//   .select select {
+//     width: 100%;
+//     font-size: $size-6;
+//   }
 
-  input[type="number"] {
-    min-width: 48px;
-    width: 48px;
-  }
-}
+//   input[type="number"] {
+//     min-width: 48px;
+//     width: 48px;
+//   }
+// }
