--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -1,30 +1,27 @@
-html.bulma
+html
   height: 100%;
 
-.bulma
-  @charset "utf-8"
+@charset "utf-8"
 
-  $bootstrap: #6f5499
-  $github: #333333
-  $twitter: #55acee
+$bootstrap: #6f5499
+$github: #333333
+$twitter: #55acee
 
-  @import "./_sass/planswell-variables"
-  @import "../bulma"
-  @import "./_sass/highlight"
-  @import "./_sass/override"
-  @import "./_sass/global"
-  @import "./_sass/index"
-  @import "./_sass/header"
-  @import "./_sass/footer"
-  @import "./_sass/specific"
-  @import "./_sass/example"
-  @import "./_sass/callout"
-  @import "./_sass/bsa"
-  @import "./_sass/route"
-  @import "./_sass/twitter"
-  @import "./_sass/expo"
-  @import "./_sass/love"
-  @import "./_sass/bootstrap"
-  @import "./_sass/planswell-overrides"
-
-
+@import "./_sass/planswell-variables"
+@import "../bulma"
+@import "./_sass/highlight"
+@import "./_sass/override"
+@import "./_sass/global"
+@import "./_sass/index"
+@import "./_sass/header"
+@import "./_sass/footer"
+@import "./_sass/specific"
+@import "./_sass/example"
+@import "./_sass/callout"
+@import "./_sass/bsa"
+@import "./_sass/route"
+@import "./_sass/twitter"
+@import "./_sass/expo"
+@import "./_sass/love"
+@import "./_sass/bootstrap"
+@import "./_sass/planswell-overrides"
