Add rounded corners to the notifications

--- a/docs/_sass/planswell-variables.scss
+++ b/docs/_sass/planswell-variables.scss
@@ -80,6 +80,7 @@ $radius: 0rem;
 $radius-large: 0rem;
 $button-radius-tiny: 0.325rem;
 $button-radius: 2.15rem;
+$notification-radius: 5px;
 
 
 //Padding
