--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3559,7 +3559,7 @@ html {
 
 .bulma .notification {
   background-color: white;
-  border-radius: 0rem;
+  border-radius: 5px;
   padding: 1.25rem 2.5rem 1.25rem 1.5rem;
   position: relative;
 }
