--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10970,7 +10970,7 @@ input[type="email"],
 input[type="password"],
 .select select {
   border: none;
-  box-sizing: content-box;
+  box-sizing: border-box;
   border-bottom: 1px solid #d0d6d8;
   box-shadow: none;
   font-size: 1.45rem;
