--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10370,15 +10370,6 @@ section .container {
 
 .progress-sjs {
   margin: 45px 0 25px !important;
-  height: 8px;
-}
-
-.progress-bar-sjs {
-  height: 8px;
-}
-
-.progress-bar-sjs.span {
-  font-size: 1px;
 }
 
 /*
@@ -10999,6 +10990,8 @@ input[type="password"],
   -webkit-transition: all 300ms ease;
   -moz-transition: all 300ms ease;
   -o-transition: all 300ms ease;
+  padding-left: 4px;
+  padding-right: 4px;
 }
 
 input[type="text"]::placeholder,
