added min-height to input styling. Should work to remedy the input height issue on mobile

--- a/docs/_sass/planswell-overrides.scss
+++ b/docs/_sass/planswell-overrides.scss
@@ -881,6 +881,7 @@ input[type="password"],
     box-shadow: none;
     font-size: $size-5;
     width: 100%;
+    min-height: 26px;
     color: $grey-dark;
     transition: $transition-standard-ease; -webkit-transition: $transition-standard-ease; -moz-transition: $transition-standard-ease; -o-transition: $transition-standard-ease;
     padding-left: 4px;
