--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10985,6 +10985,7 @@ input[type="password"],
   box-shadow: none;
   font-size: 1.45rem;
   width: 100%;
+  min-height: 26px;
   color: #6c7375;
   transition: all 300ms ease;
   -webkit-transition: all 300ms ease;
