Added small global margin to radio inputs to combat radio boxes being trimmed

--- a/docs/_sass/planswell-overrides.scss
+++ b/docs/_sass/planswell-overrides.scss
@@ -965,6 +965,7 @@ input[type="radio"],
 input[type="checkbox"] {
   width: $size-5;
   height: $size-5;
+  margin: 0.01rem;
   margin-right: 0.315rem;
 }
 
