scss rules to maintain coloured text for outlined button on hover state

--- a/docs/_sass/planswell-overrides.scss
+++ b/docs/_sass/planswell-overrides.scss
@@ -455,6 +455,10 @@ button,
     color: $primary-dark;
     border-color: $primary-dark;
   }
+  &.is-primary { &.is-outlined { &:hover {color: $primary-dark; border-color: $primary-dark;} }}
+  &.is-info { &.is-outlined { &:hover {color: $investments-hover; border-color: $investments-hover;} }}
+  &.is-success { &.is-outlined { &:hover {color: $primary-dark; border-color: $primary-dark;} }}
+  &.is-danger { &.is-outlined { &:hover {color: $insurance-dark; border-color: $insurance-dark;} }}
 
   &.is-investments {
     color: $investments;
@@ -462,9 +466,10 @@ button,
 
     &:hover {
       color: $investments-hover;
-      border-color: $investments-hover;
+      border-color: $investments;
     }
   }
+  &.is-investments { &.is-outlined { &:hover {color: $investments-hover; border-color: $investments;} }}
 
   &.is-insurance {
     color: $insurance-dark;
@@ -474,6 +479,8 @@ button,
       border-color: $insurance-dark;
     }
   }
+  &.is-insurance { &.is-outlined { &:hover {color: $insurance-dark; border-color: $insurance;} }}
+
   &.is-borrowing {
     color: $borrowing-dark;
     border-color: $borrowing;
@@ -482,6 +489,7 @@ button,
       border-color: $insurance-dark;
     }
   }
+  &.is-borrowing { &.is-outlined { &:hover {color: $borrowing-dark; border-color: $borrowing;} }}
 
   &.is-grey {
     color: $grey-light;
@@ -491,6 +499,7 @@ button,
       color: $grey;
       border-color: $grey-light;
     }
+    &.is-grey { &.is-outlined { &:hover {color: $grey; border-color: $grey-light;} }}
   }
 }
 
