--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10516,37 +10516,12 @@ button.delete,
   border-color: #139652;
 }
 
-.is-outlined.is-primary.is-outlined:hover {
-  color: #139652;
-  border-color: #139652;
-}
-
-.is-outlined.is-info.is-outlined:hover {
-  color: #1259af;
-  border-color: #1259af;
-}
-
-.is-outlined.is-success.is-outlined:hover {
-  color: #139652;
-  border-color: #139652;
-}
-
-.is-outlined.is-danger.is-outlined:hover {
-  color: #cf5220;
-  border-color: #cf5220;
-}
-
 .is-outlined.is-investments {
   color: #166cd4;
   border-color: #166cd4;
 }
 
 .is-outlined.is-investments:hover {
-  color: #1259af;
-  border-color: #166cd4;
-}
-
-.is-outlined.is-investments.is-outlined:hover {
   color: #1259af;
   border-color: #166cd4;
 }
@@ -10560,11 +10535,6 @@ button.delete,
   border-color: #cf5220;
 }
 
-.is-outlined.is-insurance.is-outlined:hover {
-  color: #cf5220;
-  border-color: #e5622e;
-}
-
 .is-outlined.is-borrowing {
   color: #e5a434;
   border-color: #ffbc47;
@@ -10572,11 +10542,6 @@ button.delete,
 
 .is-outlined.is-borrowing:hover {
   border-color: #cf5220;
-}
-
-.is-outlined.is-borrowing.is-outlined:hover {
-  color: #e5a434;
-  border-color: #ffbc47;
 }
 
 .is-outlined.is-grey {
@@ -10589,9 +10554,36 @@ button.delete,
   border-color: #a6afb0;
 }
 
-.is-outlined.is-grey.is-grey.is-outlined:hover {
+.button.is-primary.is-outlined:hover {
+  color: #139652;
+}
+
+.button.is-investments.is-outlined:hover {
+  color: #1259af;
+}
+
+.button.is-insurance.is-outlined:hover {
+  color: #da511b;
+}
+
+.button.is-borrowing.is-outlined:hover {
+  color: #d9941c;
+}
+
+.button.is-success.is-outlined:hover {
+  color: #139652;
+}
+
+.button.is-info.is-outlined:hover {
+  color: #1259af;
+}
+
+.button.is-danger.is-outlined:hover {
+  color: #da511b;
+}
+
+.button.is-grey.is-outlined:hover {
   color: #888f91;
-  border-color: #a6afb0;
 }
 
 .is-investments {
