--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10977,7 +10977,7 @@ label.label.figure-right.is-goals .root-goal {
 }
 
 .input {
-  height: 1.45em;
+  min-height: 1.45em;
 }
 
 .value-right {
@@ -11018,6 +11018,7 @@ input[type="password"],
   font-size: 1.45rem;
   width: 100%;
   min-height: 26px;
+  height: auto;
   color: #6c7375;
   transition: all 300ms ease;
   -webkit-transition: all 300ms ease;
